--- a/src/Themes/KrakeAdmin/Assets/krakeadmin.scss
+++ b/src/Themes/KrakeAdmin/Assets/krakeadmin.scss
@@ -77,26 +77,6 @@ html {
     padding: 0;
 }
 
-button, .button, a.button {
-    background: #de625e none repeat scroll 0 0;
-    color: #fff !important;
-    border: 0 none;
-    border-radius: 2px;
-    box-shadow: none;
-    height: 30px;
-    min-width: 110px;
-    font-size: $fontsize-default;
-    padding: 6px 12px !important;
-}
-
-.widgets-actions {
-    font-size: $fontsize-default;
-}
-/* style buttons for google maps*/
-button.gm-control-active, .button.gm-control-active, a.button.gm-control-active {
-    min-width: 0px;
-}
-
 .mce-btn button {
     color: initial !important;
 }
@@ -120,9 +100,11 @@ button.gm-control-active, .button.gm-control-active, a.button.gm-control-active 
     opacity: 1 !important;
 }
 
-span .button {
-    height: 20px;
-}
+span {
+    .button {
+        height: 20px;
+    }
+} 
 
 button:active, .button:active, a.button:active {
     background: #ee726f;
@@ -209,8 +191,10 @@ fieldset.taxonomy-wrapper .expando-glyph {
     cursor: pointer;
 }
 
-table.items {
-    border-color: #dae7eb #dae7eb -moz-use-text-color !important;
+table {
+    &.items {
+        border-color: #dae7eb #dae7eb -moz-use-text-color !important;
+    }
 }
 
 .widgets-listed li li.widgets-this-layer, #widgets-layer-visibility li.widgets-this-layer {
@@ -225,33 +209,73 @@ table.items {
     border-color: #1c2a37 !important;
 }
 
-button.widgets-move {
-    background-color: rgba(0, 0, 0, 0) !important;
-    background-image: url("../../../modules/orchard.widgets/styles/images/arrows.png") !important;
-    border: 0 none !important;
+.widgets-actions {
+    &.button {
+        &.grey {
+            background: #00a65a;
+            border-color: #008d4c;
+            border-radius: 3px;
+            color: #fff;
+        }
+    }
 }
 
-.widgets-actions .button.grey {
-    background: #00a65a;
-    border-color: #008d4c;
-    border-radius: 3px;
-    color: #fff;
+.content-picker {
+    &.button {
+        .grey {
+            background: #00a65a;
+            border-color: #008d4c;
+            color: #fff;
+        }
+    }
 }
 
-.content-picker .button.grey {
-    background: #00a65a;
-    border-color: #008d4c;
-    color: #fff;
+
+button, .button, a.button {
+    background: #de625e none repeat scroll 0 0;
+    color: #fff !important;
+    border: 0 none;
+    border-radius: 2px;
+    box-shadow: none;
+    height: 30px;
+    min-width: 110px;
+    font-size: $fontsize-default;
+    padding: 6px 12px !important;
 }
 
-button.link {
-    background: rgba(0, 0, 0, 0) none repeat scroll 0 0 !important;
-    border: 0 none !important;
-    color: #252c36 !important;
+.widgets-actions {
+    font-size: $fontsize-default;
+}
+/* style buttons for google maps*/
+.button.gm-control-active {
+    min-width: 0px;
 }
 
-button.link:hover {
-    text-decoration: underline;
+a.button.gm-control-active {
+    min-width: 0px;
+}
+
+
+button {
+    &.widgets-move {
+        background-color: rgba(0, 0, 0, 0) !important;
+        background-image: url("../../../modules/orchard.widgets/styles/images/arrows.png") !important;
+        border: 0 none !important;
+    }
+
+    &.link {
+        background: rgba(0, 0, 0, 0) none repeat scroll 0 0 !important;
+        border: 0 none !important;
+        color: #252c36 !important;
+
+        &:hover {
+            text-decoration: underline;
+        }
+
+        &.gm-control-active {
+            min-width: 0px;
+        }
+    }
 }
 
 .local-section-content-types,
@@ -260,14 +284,16 @@ button.link:hover {
     margin-bottom: -8px !important;
 }
 
-/*Ovverides jquery UI in order to make text into tabs same as the others */
+/*Overrides jquery UI in order to make text into tabs same as the others */
 .ui-widget {
     font-size: 1em !important;
     font-family: Roboto, sans-serif, Helvetica, Arial, sans-serif;
 }
 
-.ui-widget.ui-multiselect {
-    color: #555555 !important;
+.ui-widget {
+    &.ui-multiselect {
+        color: #555555 !important;
+    }
 }
 
 .breadcrumb {
@@ -280,13 +306,14 @@ button.link:hover {
     border-radius: 3px;
 }
 
-.breadcrumb a {
-    color: #1c2a37 !important;
-}
-
-.breadcrumb a:hover {
-    text-decoration: underline !important;
-}
+.breadcrumb {
+    a {
+        color: #1c2a37 !important;
+        &:hover {
+            text-decoration: underline !important;
+        }
+    }
+} 
 
 .zone-messages {
     //padding-top: 40px;
@@ -313,7 +340,13 @@ select:not(.selector):not(.ui-datepicker-month):not(.ui-datepicker-year):not(.ca
     min-width: 300px;
 }
 
-.bulk-actions > #filterResults, #filterCultures {
+.bulk-actions {
+    > #filterResults {
+        min-width: 10px;
+    }
+}
+
+#filterCultures {
     min-width: 10px;
 }
 
@@ -356,30 +389,38 @@ select[multiple] {
     background: transparent;
 }
 
-.bulk-actions label {
-    min-width: 200px;
-}
+.bulk-actions {
+    label {
+        min-width: 200px;
+    }
+} 
 
 .contentItems {
     border-radius: 3px;
 }
 
-.contentItems li:first-child {
-    -moz-border-radius: 3px 3px 0px 0px;
-    -webkit-border-radius: 3px 3px 0px 0px;
-    border-radius: 3px 3px 0px 0px;
+.contentItems {
+    li {
+        :first-child {
+            -moz-border-radius: 3px 3px 0px 0px;
+            -webkit-border-radius: 3px 3px 0px 0px;
+            border-radius: 3px 3px 0px 0px;
+        }
+
+        :last-child {
+            -moz-border-radius: 0px 0px 3px 3px;
+            -webkit-border-radius: 0px 0px 3px 10px;
+            border-radius: 0px 0px 3px 3px;
+        }
+    }
 }
 
-.contentItems li:last-child {
-    -moz-border-radius: 0px 0px 3px 3px;
-    -webkit-border-radius: 0px 0px 3px 10px;
-    border-radius: 0px 0px 3px 3px;
-}
-
-.properties h3 {
-    color: #1c2a37 !important;
-    font-size: 15px;
-}
+.properties {
+    h3 {
+        color: #1c2a37 !important;
+        font-size: 15px;
+    }
+} 
 
 form.link button, button.link {
     color: #fff;
@@ -391,13 +432,13 @@ a, a:link, a:visited {
     text-decoration: none;
 }
 
-button.link:hover {
-    text-decoration: underline;
-}
 
-.pageStatus a {
-    padding-left: 14px;
-}
+
+.pageStatus {
+    a {
+        padding-left: 14px;
+    }
+} 
 
 #search-box {
     overflow: hidden;
@@ -442,9 +483,11 @@ button.link:hover {
     }
 }
 
-.localmenu-content-picker li {
-    padding-bottom: 0.4em;
-}
+.localmenu-content-picker {
+    li {
+        padding-bottom: 0.4em;
+    }
+} 
 
 .ui-widget-header {
     background: #f0f0ee !important;
@@ -497,7 +540,6 @@ legend {
     min-width: 300px;
 }
 
-
 .location-info {
     display: block;
     margin-bottom: 5px;
@@ -508,8 +550,6 @@ legend {
     min-width: 200px !important;
     font-size: 15px;
 }
-
-
 
 .validation-summary-errors li::before {
     content: "\f071";
@@ -572,11 +612,13 @@ legend {
     min-height: 155px;
 }
 
-.category h2 {
-    font-family: "Roboto";
-    font-size: 20px;
-    padding: 13px 0px;
-}
+.category {
+    h2 {
+        font-family: "Roboto";
+        font-size: 20px;
+        padding: 13px 0px;
+    }
+} 
 
 .features .feature .summary .properties h3 label {
     cursor: pointer;
@@ -604,11 +646,11 @@ legend {
     right: 0 !important;
     padding: 8px !important;
     font-size: 0.7em !important;
-}
 
-.mce-branding a {
-    font-size: 1em !important;
-    cursor: pointer !important;
+    a {
+        font-size: 1em !important;
+        cursor: pointer !important;
+    }
 }
 
 #activity-toolbar > div label {
@@ -619,8 +661,10 @@ legend {
     font-size: 15px;
 }
 
-.widgets-move-somewhere button {
-    min-height: auto;
+.widgets-move-somewhere {
+    button {
+        min-height: auto;
+    }
 }
 
 .bulk-actions {
@@ -632,8 +676,10 @@ legend {
     padding-bottom: 20px;
 }
 
-#CommonPart_Creator_Value:parent {
-    display: none;
+#CommonPart_Creator_Value {
+    &:parent {
+        display: none;
+    }
 }
 
 .ui-datepicker-group {
@@ -698,15 +744,17 @@ input.tokenized {
     height: 100%;
 }
 
-.ui-autocomplete .acvalue {
-    left: 330px;
-    position: absolute;
-}
+.ui-autocomplete {
+    .acvalue {
+        left: 330px;
+        position: absolute;
+    }
 
-.ui-autocomplete .acdesc {
-    left: 780px;
-    position: absolute;
-    width: 400px;
+    .acdesc {
+        left: 780px;
+        position: absolute;
+        width: 400px;
+    }
 }
 
 input[type=number] {
@@ -785,9 +833,11 @@ input[type="number"]:focus {
     background: none;
 }
 
-.dashboard h2 {
-    text-align: center;
-}
+.dashboard {
+    h2 {
+        text-align: center;
+    }
+} 
 
 .contentItems .related {
     text-align: right;
@@ -942,21 +992,21 @@ input[type="number"]:focus {
 
 .box-app-icone {
     margin-top: 15px;
-}
 
-.box-app-icone .link-app {
-    background: #FFF;
-    border-radius: 50%;
-    height: 45px;
-    width: 45px;
-    display: inline-block;
-    text-align: center;
-}
+    .link-app {
+        background: #FFF;
+        border-radius: 50%;
+        height: 45px;
+        width: 45px;
+        display: inline-block;
+        text-align: center;
+    }
 
-.box-app-icone .fa {
-    color: #EEB377;
-    font-size: 28px;
-    line-height: 45px;
+    .fa {
+        color: #EEB377;
+        font-size: 28px;
+        line-height: 45px;
+    }
 }
 
 .tab-pane .icone-freccia {
@@ -978,15 +1028,17 @@ input[type="number"]:focus {
     display: block;
 }
 
-.nav-tabs .freccia {
-    position: absolute;
-    top: 150px;
-    transition: all ease 0.4s;
-    -moz-transition: all ease 0.4s;
-    -ms-transition: all ease 0.4s;
-    -webkit-transition: all ease 0.4s;
-    -o-transition: all ease 0.4s;
-}
+.nav-tabs {
+    .freccia {
+        position: absolute;
+        top: 150px;
+        transition: all ease 0.4s;
+        -moz-transition: all ease 0.4s;
+        -ms-transition: all ease 0.4s;
+        -webkit-transition: all ease 0.4s;
+        -o-transition: all ease 0.4s;
+    }
+} 
 
 .nav-tabs li.active .freccia, .nav-tabs li:hover .freccia {
     top: 84px;
@@ -1405,8 +1457,10 @@ fieldset small {
     padding: 10px;
 }
 
-.box.box-warning {
-    border-top-color: #f39c12;
+.box {
+    &.box-warning {
+        border-top-color: #f39c12;
+    }
 }
 
 .box-header.with-border {
@@ -1594,12 +1648,18 @@ fieldset small {
     color: #1c2a37 !important;
 }
 
-.features .disabled.feature {
-    background: #f5f5f5 none repeat scroll 0 0;
+.features {
+    &.disabled.feature {
+        background: #f5f5f5 none repeat scroll 0 0;
+    }
 }
 
-.properties a:hover {
-    text-decoration: underline;
+.properties {
+    a {
+        &:hover {
+            text-decoration: underline;
+        }
+    }
 }
 
 .switch-for-switchable.summary-switched .summary-view, .switch-for-switchable.detail-switched .summary-view {
@@ -1670,9 +1730,11 @@ li .widgets-this-layer form {
     padding-top: 5px;
 }
 
-li .widgets-other-layer form {
-    padding-bottom: 5px;
-    padding-top: 5px;
+li .widgets-other-layer {
+    form {
+        padding-bottom: 5px;
+        padding-top: 5px;
+    }
 }
 
 .widgets-listed .widgets-zone-widgets .widgets-this-layer div.contentType {
@@ -11600,14 +11662,21 @@ input#adminfilter {
     z-index: 1;
 }
 /*Widgets container*/
-ul.widgets li:first-child {
-    margin-top: 15px !important;
+ul {
+    &.widgets {
+        li {
+            &:first-child {
+                margin-top: 15px !important;
+            }
+        }
+
+        h3 {
+            font-weight: normal;
+            font-size: 15px;
+        }
+    }
 }
 
-ul.widgets h3 {
-    font-weight: normal;
-    font-size: 15px;
-}
 /*Media Library*/
 
 .media-library-main-list-overlay p {
@@ -11615,6 +11684,9 @@ ul.widgets h3 {
 }
 
 #media-library-main-editor {
+    font-size: .9em;
+    min-width: 250px;
+
     ul.pageStatus {
         display: flex;
         flex-direction: row;
@@ -11633,7 +11705,6 @@ ul.widgets h3 {
         }
     }
 }
-
 /* Navigation */
 #local-navigation {
     margin-bottom: -9px;
