--- a/src/Themes/KrakeAdmin/Assets/krakeadmin.scss
+++ b/src/Themes/KrakeAdmin/Assets/krakeadmin.scss
@@ -1497,20 +1497,29 @@ fieldset small {
     padding: 5px 5px 5px 25px;
 }
 
-#widgets-available li a {
-    border: 1px solid #eaeaea;
-    display: block;
-    padding: 5px 10px;
-    color: #1c2a37;
-    font-size: 11px;
-    background: #fff;
-    font-family: 'Roboto';
+#widgets-available {
+    background: #fff none repeat scroll 0 0;
+    border: 1px solid #f5f5f5;
+    padding: 5px;
+
+    li {
+        a {
+            border: 1px solid #eaeaea;
+            display: block;
+            padding: 5px 10px;
+            color: #1c2a37;
+            font-size: 11px;
+            background: #fff;
+            font-family: 'Roboto';
+
+            &:hover {
+                background: #f4f4f4;
+                border: 1px solid #f5f5f5;
+            }
+        }
+    }
 }
 
-#widgets-available li a:hover {
-    background: #f4f4f4;
-    border: 1px solid #f5f5f5;
-}
 
 #widgets {
     &.group {
@@ -1518,7 +1527,7 @@ fieldset small {
     }
 }
 
-#widgets-zones, #widgets-zones-orphans, #widgets-available {
+#widgets-zones, #widgets-zones-orphans {
     background: #fff none repeat scroll 0 0;
     border: 1px solid #f5f5f5;
     padding: 5px;
