--- a/src/Modules/Laser.Orchard.Questionnaires/Views/QuestionnaireStats/Detail.cshtml
+++ b/src/Modules/Laser.Orchard.Questionnaires/Views/QuestionnaireStats/Detail.cshtml
@@ -98,14 +98,14 @@
         <div class="box-body">
             @if (Model.QuestionsStatsList.Count == 0) {
                 <div class="row">
-                    <div class="col-xs-12">
+                    <div class="col-12">
                         @T("This questionnaire contains no answers.")
                     </div>
                 </div>
             }
             else {
                 <div class="row">
-                    <div class="col-xs-4">
+                    <div class="col-4">
                         <!-- small box -->
                         <div class="small-box bg-aqua">
                             <div class="inner">
@@ -119,7 +119,7 @@
                         </div>
                     </div>
                     <!-- ./col -->
-                    <div class="col-xs-4">
+                    <div class="col-4">
                         <!-- small box -->
                         <div class="small-box bg-green">
                             <div class="inner">
@@ -134,7 +134,7 @@
                         </div>
                     </div>
                     <!-- ./col -->
-                    <div class="col-xs-4">
+                    <div class="col-4">
                         <!-- small box -->
                         <div class="small-box bg-yellow">
                             <div class="inner">
@@ -152,7 +152,7 @@
 
                 </div>
                 <div class="row">
-                    <div class="col-xs-12">
+                    <div class="col-12">
                         @{
                             foreach (var question in Model.QuestionsStatsList) {
                                 <div id="answer-@question.QuestionId" class="st-answer">
